[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/ENEMIES/golem-Sheet.png" type="Texture" id=1]
[ext_resource path="res://entities/bosses/GolemBoss.gd" type="Script" id=2]
[ext_resource path="res://entities/bosses/AnimationTree.gd" type="Script" id=3]
[ext_resource path="res://entities/bosses/JumpAttackHitbox.gd" type="Script" id=4]
[ext_resource path="res://entities/bosses/SmashAttackHitbox.gd" type="Script" id=5]
[ext_resource path="res://entities/bosses/SecondPhazeAttackHitBox.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 17.875 )

[sub_resource type="Animation" id=6]
resource_name = "DEATH"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39, 40 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable_all"
}, {
"args": [  ],
"method": "spawn_item"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "DOUBLE_SMASH"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/double_smash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "HURT"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/idle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "JUMP"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 44, 45, 46, 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/jump")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "jump"
}, {
"args": [  ],
"method": "jump_anim"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "LAND"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/land")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("JumpAttackHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("JumpAttackHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shake_screen_anim"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_jump_projectiles"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "RUN"
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=32]
resource_name = "SECOND_PHASE_ATTACK"
length = 5.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 21, 22, 23, 24, 25, 26, 27, 28, 21, 22, 23, 24, 25, 26, 27, 28, 21, 22, 23, 24, 25, 26, 27, 28, 21, 22, 23, 24, 25, 26, 27, 28, 21, 22, 23, 24, 25, 26, 27, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/second_phase_attack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6, 4, 4.4, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
}, {
"args": [  ],
"method": "shake_screen_anim"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.1, 1.9, 2.7, 3.5, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "second_phase_attack_facing"
}, {
"args": [  ],
"method": "second_phase_attack_facing"
}, {
"args": [  ],
"method": "second_phase_attack_facing"
}, {
"args": [  ],
"method": "second_phase_attack_facing"
}, {
"args": [  ],
"method": "second_phase_attack_facing"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SecondPhazeAttackHitBox:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SecondPhazeAttackHitBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 0.9, 1.3, 1.7, 2.1, 2.5, 2.9, 3.3, 3.7, 4.1, 4.5, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
}, {
"args": [  ],
"method": "spawn_stone_projectiles"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "SMASH_ATTACK"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/smash_attack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmashAttackHitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmashAttackHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_melee_projectiles"
}, {
"args": [  ],
"method": "shake_screen_anim"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "DEATH"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "JUMP"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "LAND"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "SECOND_PHASE_ATTACK"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "SMASH_ATTACK"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true
advance_condition = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
advance_condition = "smash_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
advance_condition = "jump"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true
advance_condition = "land"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true
advance_condition = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
advance_condition = "second_phase_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true
advance_condition = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachine" id=22]
states/DEATH/node = SubResource( 24 )
states/DEATH/position = Vector2( 800, 79 )
states/IDLE/node = SubResource( 11 )
states/IDLE/position = Vector2( 304, 79 )
states/JUMP/node = SubResource( 12 )
states/JUMP/position = Vector2( 185, 207 )
states/LAND/node = SubResource( 13 )
states/LAND/position = Vector2( 420, 207 )
states/SECOND_PHASE_ATTACK/node = SubResource( 34 )
states/SECOND_PHASE_ATTACK/position = Vector2( 185, -32 )
states/SMASH_ATTACK/node = SubResource( 14 )
states/SMASH_ATTACK/position = Vector2( 462, -32 )
transitions = [ "SMASH_ATTACK", "IDLE", SubResource( 15 ), "IDLE", "SMASH_ATTACK", SubResource( 16 ), "IDLE", "JUMP", SubResource( 19 ), "JUMP", "LAND", SubResource( 20 ), "LAND", "IDLE", SubResource( 21 ), "IDLE", "DEATH", SubResource( 25 ), "SMASH_ATTACK", "DEATH", SubResource( 26 ), "LAND", "DEATH", SubResource( 28 ), "JUMP", "DEATH", SubResource( 29 ), "IDLE", "SECOND_PHASE_ATTACK", SubResource( 35 ), "SECOND_PHASE_ATTACK", "IDLE", SubResource( 36 ), "SECOND_PHASE_ATTACK", "DEATH", SubResource( 37 ) ]
start_node = "IDLE"
graph_offset = Vector2( -125, -56 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 24.75, 7.5 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 24.125, 7.25 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 19.375, 6.25 )

[node name="GolemBoss" type="KinematicBody2D" groups=["boss"]]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -5, 0 )
hframes = 6
vframes = 8
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.25, 8.5 )
shape = SubResource( 1 )

[node name="KnockBackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SlowDownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DEATH = SubResource( 6 )
anims/DOUBLE_SMASH = SubResource( 4 )
anims/HURT = SubResource( 7 )
anims/IDLE = SubResource( 2 )
anims/JUMP = SubResource( 8 )
anims/LAND = SubResource( 9 )
anims/RUN = SubResource( 3 )
anims/SECOND_PHASE_ATTACK = SubResource( 32 )
anims/SMASH_ATTACK = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 23 )
parameters/conditions/death = false
parameters/conditions/idle = false
parameters/conditions/jump = false
parameters/conditions/land = false
parameters/conditions/second_phase_attack = false
parameters/conditions/smash_attack = false
script = ExtResource( 3 )

[node name="JumpAttackHitbox" type="Area2D" parent="." groups=["attack"]]
visible = false
collision_layer = 0
monitoring = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpAttackHitbox"]
self_modulate = Color( 0, 1, 0.0625, 1 )
position = Vector2( 3.25, 19.75 )
shape = SubResource( 30 )
disabled = true

[node name="SmashAttackHitbox" type="Area2D" parent="." groups=["attack"]]
visible = false
collision_layer = 0
monitoring = false
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmashAttackHitbox"]
self_modulate = Color( 0.219608, 1, 0, 1 )
position = Vector2( -24, 20.25 )
shape = SubResource( 31 )
disabled = true

[node name="SecondPhazeAttackHitBox" type="Area2D" parent="." groups=["attack"]]
visible = false
collision_layer = 0
monitoring = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondPhazeAttackHitBox"]
self_modulate = Color( 0.14902, 1, 0, 1 )
position = Vector2( -19.125, 20.25 )
shape = SubResource( 33 )
disabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 3.35, 2.9 )

[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="SlowDownTimer" to="." method="_on_SlowDownTimer_timeout"]
[connection signal="area_entered" from="JumpAttackHitbox" to="JumpAttackHitbox" method="_on_JumpAttackHitbox_area_entered"]
[connection signal="area_entered" from="SmashAttackHitbox" to="SmashAttackHitbox" method="_on_SmashAttackHitbox_area_entered"]
[connection signal="area_entered" from="SecondPhazeAttackHitBox" to="SecondPhazeAttackHitBox" method="_on_SecondPhazeAttackHitBox_area_entered"]
